# pyspass

./: .gitignore  Pipfile  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: python-app.yml  python-package.yml
doc/source/: conf.py  howto.rst  index.rst  modules.rst  pyspass.rst
js/: spass_forms.js
pyspass/: __init__.py  pyspass.py
pyspass/tests/: test_PySpassRequest.py  test_htmlCheckbox.py  test_htmlDiv.py  test_htmlForm.py  test_htmlInput.py  test_htmlLabel.py  test_htmlObjects.py  test_htmlRow.py  test_htmlSelect.py  test_htmlSubmit.py  test_htmlTable.py  test_htmlTextInput.py  test_resultChoice.py  test_resultEditor.py  test_resultListing.py
tests/: test_PySpassRequest.py  test_htmlButton.py  test_htmlLabel.py  test_htmlLink.py  test_htmlObjects.py  test_htmlSelect.py  test_htmlTextInput.py  test_resultChoice.py
