[metadata]
name = pyspass
version = 0.2.3
author = Stefan Seltmann
author_email = s.seltmann06@web.de
description = Python Single Page Applications HTML
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/stefanseltmann77/pyspass
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = pyspass
python_requires = >=3.9

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True


[pylint]
disable = C0103, C0116, C0115, R0903
max-line-length = 120
ignore-patterns = tests*
max-args = 10


[flake8]
max-line-length = 120